syntax = "proto3";

package com.example.todo;

option java_multiple_files = true;

message Todo {
  string id = 1;
  string content = 2;
}

message AllTodoRequest {
}

message AllTodoResponse {
  repeated Todo todos = 1;
}

message CreateTodoRequest {
  string content = 2;
}

message CreateTodoResponse {
}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {
}

service TodoService {
  rpc getAll(AllTodoRequest) returns (AllTodoResponse);
  rpc createTodo(CreateTodoRequest) returns (CreateTodoResponse);
  rpc deleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
}
